# Proteus

./: .gitignore  pyproject.toml
src/proteus/: __init__.py
src/proteus/cli/: main.py
src/proteus/storage/: paths.py
