[project]
name = "proteus"
version = "0.1.0"
description = "Your local friendly philosopher"
readme = "README.md"
authors = [
    { name = "LostWarrior", email = "LostWarrior@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
proteus = "proteus.cli.main:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
